--- a/_scss/layout/_about.scss
+++ b/_scss/layout/_about.scss
@@ -64,7 +64,7 @@ section.team-section {
     }
 
     @media (max-width: 768px) {
-      font-size: 20px;
+      font-size: $text-font-size-3-xs;
       font-weight: 400;
       margin-bottom: 50px;
       &::after {
@@ -233,7 +233,7 @@ section.story-section {
     padding: 50px 0 0;
 
     .section-title {
-      font-size: 20px;
+      font-size: $text-font-size-3-xs;
       text-transform: inherit;
       position: relative;
       margin-bottom: 20px;
