--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -2,6 +2,7 @@
 $font-family: 'Titillium Web'; // Google Font
 $text-font-size-1: 18px;
 $text-font-size-2: 20px;
+$text-font-size-3: 24px;
 $title-font-size-1: 29px;
 $title-font-size-2: 50px;
 
@@ -10,6 +11,8 @@ $text-font-size-2-xs: 18px;
 $text-font-size-3-xs: 20px;
 $text-font-size-4-xs: 22px;
 $text-font-size-5-xs: 24px;
+$text-font-size-6-xs: 34px;
+
 // Animations Timing
 $transition-links: 300ms;
 $animation-arrow-header-time: 2.5s;
