fix: download page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       <div class="col-xs-8 toggle-menu">
         <div class="toggle-menu__actions">
           <a class="nav-link--shortcut" href="{{ site.links.telegram }}n" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-          <a class="button nav-button" href="resources/download/">GET DIODE</a>
+          <a class="button nav-button" href="resources/download/">Download</a>
         </div>
         <!-- Burger -->
         <div class="navTrigger"><i></i><i></i></div>
