--- a/_scss/layout/_download.scss
+++ b/_scss/layout/_download.scss
@@ -16,9 +16,28 @@ section.download-section {
 
   .download {
     padding: 60px 0;
-    &:first-child {
+    
+    &:nth-child(2) {
       background-color: $bg;
       color: $dark-blue;
+      @media (max-width: 768px) {
+        padding: 0;
+        background-color: $white;
+        p {
+          color: $gray;
+          line-height: 1.5;
+          margin-bottom: 30px;
+        }
+        .download__left {
+          width: 100%;
+          display: flex;;
+          justify-content: center;
+          align-items: center;
+          .action-description {
+            display: none;
+          }
+        }
+      }
     }
     &:last-child {
       background-color: $web-blue;
