--- a/css/style.css
+++ b/css/style.css
@@ -7431,9 +7431,39 @@ section.download-section .download {
   padding: 60px 0;
 }
 
-section.download-section .download:first-child {
+section.download-section .download:nth-child(2) {
   background-color: #F1F3F6;
   color: #1f2739;
+}
+
+@media (max-width: 768px) {
+  section.download-section .download:nth-child(2) {
+    padding: 0;
+    background-color: #fff;
+  }
+  section.download-section .download:nth-child(2) p {
+    color: #5c5d5f;
+    line-height: 1.5;
+    margin-bottom: 30px;
+  }
+  section.download-section .download:nth-child(2) .download__left {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  section.download-section .download:nth-child(2) .download__left .action-description {
+    display: none;
+  }
 }
 
 section.download-section .download:last-child {
