fix: menu bottom line color

--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -157,7 +157,7 @@ header.site-header {
               z-index: 1;
               padding-top: 30px;
               padding-bottom: 30px;
-              border-bottom: 2px solid $orange;
+              border-bottom: 2px solid $web-blue;
 
               .container {
                 margin-left: auto;
