--- a/css/style.css
+++ b/css/style.css
@@ -3046,7 +3046,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .su
   z-index: 1;
   padding-top: 30px;
   padding-bottom: 30px;
-  border-bottom: 2px solid #f15d2f;
+  border-bottom: 2px solid #2d3e50;
 }
 
 header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .subnav-content .container {
