--- a/_scss/layout/_download.scss
+++ b/_scss/layout/_download.scss
@@ -114,7 +114,7 @@ section.download-section {
       .action-description {
         position: absolute;
         bottom: -1.8em;
-        font-size: 0.6em;
+        font-size: 12px;
       }
     }
     &-command {
