--- a/_scss/layout/_hero.scss
+++ b/_scss/layout/_hero.scss
@@ -11,10 +11,14 @@
 section.site-section.hero-section {
     background-color: $web-blue;
     color: $white;
-    background-image: url('../images/hero-right.png');
+    background-image: url('../images/cloud.png');
     background-repeat: no-repeat;
     background-position: right;
     background-size: 50%;
+
+    @media (max-width: 993px) {
+        background-position: top right;
+    }
 
     @media (max-width: 768px) {
         background-size: inherit;
@@ -25,6 +29,29 @@ section.site-section.hero-section {
 
     .container .row {
         justify-content: left;
+
+        position: relative;
+
+        &::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background-image: url('../images/ic.png');
+            background-repeat: no-repeat;
+            background-position: 86% 40%;
+            @media (max-width: 1200px) {
+                background-position: right 40%;
+            }
+            @media (max-width: 993px) {
+                background-size: 200px;
+                background-position: 90% 40%;
+            }
+            @media (max-width: 768px) {
+                display: none;
+            }
+        }
+
         .hero-title {
             font-size: $title-font-size-2;
             line-height: 1.2;
@@ -35,7 +62,7 @@ section.site-section.hero-section {
             &::after {
                 content: '';
                 position: absolute;
-                width: 260px;
+                width: 400px;
                 background-color: $orange;
                 height: 1px;
                 bottom: -7px;
@@ -128,7 +155,7 @@ section.site-section.hero-section {
             .action-descriptoin {
                 position: absolute;
                 bottom: -1.8em;
-                font-size: .58em;
+                font-size: 12px;
             }
             .text-xs { 
                 display: none;
