fix: downloads, hero, button hover

--- a/_includes/sections/download.html
+++ b/_includes/sections/download.html
@@ -10,8 +10,8 @@
     <div class="download">
         <div class="container">
             <div class="row">
-                <div class="download__left col-sm-4">
-                    <div class="download-title hidden-xs">
+                <div class="download__left col-sm-6 col-md-4">
+                    <div class="download-title">
                         <img class="icon" src="{{ site.d-drive.icon }}" />
                         <h2 class="title">{{ site.d-drive.title }} </h2>
                     </div>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8 hidden-xs">
+                <div class="col-sm-6 col-md-8 hidden-xs">
                     <div class="download-content">
                         <div class="download-description">
                             {{ site.d-drive.description }}
@@ -43,14 +43,14 @@
     <!-- Download Diode CLI -->
     <div class="download">
         <div class="container">
-            <div class="row hidden-xs">
-                <div class="download__left col-sm-4">
+            <div class="row">
+                <div class="download__left col-sm-6 col-md-4">
                     <div class="download-title">
                         <img class="icon" src="{{ site.diode-cli.icon }}" />
                         <h2 class="title">{{ site.diode-cli.title }} </h2>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-6 col-md-8 hidden-xs">
                     <div class="download-content">
                         <div class="download-description">
                             {{ site.diode-cli.description }}
