--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,7 +83,9 @@
     <div class="row footer-bottom-2">
       <div class="col-xs-12">
         <div class="footer-text">
-          All Right Reserved! <span>DIODE © 2020 Copyright</span>
+          <div class="footer-copyright">
+            DIODE © 2020, All Rights Reserved
+          </div>
         </div>
       </div>
     </div>
